--- a/README
+++ b/README
@@ -15,8 +15,13 @@ commonly write in your Rails controllers. For example:
   class UsersController < ActionController::Base
     before_filter :find_user, :only => [:show, :edit]
     
-    def show; end
-    def edit; end
+    def show
+      # do something with @user
+    end
+    
+    def edit
+      # do something with @user
+    end
     
     def find_user
       @user = User.find(params[:id)
@@ -35,14 +40,14 @@ finder_filter reduces this pattern to a single line:
 To find based on a column other than ID:
 
   finder_filter :user, :by => :name
-    # equivalent to:
-    #   @user = User.find_by_name(params[:id])
+  # equivalent to:
+  #   @user = User.find_by_name(params[:id])
 
 To find based on a param other than ID:
 
   finder_filter :user, :param => :permalink
-    # equivalent to:
-    #   @user = User.find(params[:permalink])
+  # equivalent to:
+  #   @user = User.find(params[:permalink])
 
 The standard Rails :only and :except options can also be used:
 
