--- a/README
+++ b/README
@@ -4,11 +4,19 @@ An easy way to add common finders to your Rails controllers.
 
 == Installation
 
+Install the gem directly:
+
   gem sources -a http://gems.github.com (you only have to do this once)
   sudo gem install pelargir-finder_filter
+  
+Or install the gem in your Rails project:
+  
+  gem sources -a http://gems.github.com
+  script/plugin install pelargir-finder_filter
 
-To use with a Rails 2.1 app, edit the environment.rb file and add an
-entry for the gem to the Rails::Initializer config block.
+Or clone the project:
+
+  git clone git://github.com/pelargir/finder_filter.git
 
 == Usage
 
