--- a/README
+++ b/README
@@ -6,13 +6,11 @@ An easy way to add common finders to your Rails controllers.
 
 Install the gem directly:
 
-  gem sources -a http://gems.github.com (you only have to do this once)
-  sudo gem install pelargir-finder_filter
+  sudo gem install pelargir-finder_filter --source=http://gems.github.com
   
 Or install the gem in your Rails project:
   
-  gem sources -a http://gems.github.com
-  script/plugin install pelargir-finder_filter
+  script/plugin install git://github.com/pelargir/finder_filter.git
 
 Or clone the project:
 
